// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput  renders as expected 1`] = `
<div
  className="input-group wt-text-input wt-text-input--normal mb-3"
>
  <label
    htmlFor="Name"
  >
    Name
  </label>
  <input
    id="Name"
    onChange={[Function]}
    placeholder="Name Surname"
    type="text"
    value=""
  />
  <div
    className="alert--disabled"
    role="alert"
  />
  <div
    className="wt-text-input__comment--active"
  >
    No comment
  </div>
</div>
`;

exports[`TextInput  renders textarea input 1`] = `
<div
  className="input-group wt-text-input wt-text-input--normal mb-3"
>
  <label
    htmlFor="Name"
  >
    Name
  </label>
  <textarea
    id="Name"
    onChange={[Function]}
    placeholder="Name Surname"
    required={true}
    rows="4"
    type="text"
    value=""
  />
  <div
    className="alert--disabled"
    role="alert"
  />
  <div
    className="wt-text-input__comment--active"
  >
    No comment
  </div>
</div>
`;

exports[`TextInput  renders with minimal config props 1`] = `
<div
  className="input-group null null--normal mb-3"
>
  <label
    htmlFor="Name"
  />
  <input
    id="Name"
    onChange={[Function]}
    placeholder={null}
    type="text"
    value=""
  />
  <div
    className="alert--disabled"
    role="alert"
  />
  <div
    className="null__comment--active"
  />
</div>
`;
